--- a/_functions.scss
+++ b/_functions.scss
@@ -1,4 +1,6 @@
 @use "sass:string";
+@use "sass:math";
+@use "sass:map";
 
 $escaped-characters: (
                 ("<", "%3c"),
@@ -73,16 +75,16 @@ $escaped-characters: (
         }
     }
     $result: $result * $factor * $sign;
-    $dividend-unit: unit($dividend);
-    $divisor-unit: unit($divisor);
+    $dividend-unit: math.unit($dividend);
+    $divisor-unit: math.unit($divisor);
     $unit-map: (
             "px": 1px,
             "rem": 1rem,
             "em": 1em,
             "%": 1%
     );
-    @if ($dividend-unit != $divisor-unit and map-has-key($unit-map, $dividend-unit)) {
-        $result: $result * map-get($unit-map, $dividend-unit);
+    @if ($dividend-unit != $divisor-unit and map.has-key($unit-map, $dividend-unit)) {
+        $result: $result * map.get($unit-map, $dividend-unit);
     }
     @return $result;
 }
